# amasto

./: README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md
src/amasto/: __init__.py  _client.py  _endpoint.py  _nodeinfo.py  _params.py  _resource.py  _version.py
src/amasto/api/: __init__.py  _oembed.py
src/amasto/api/v1/: __init__.py  _accounts.py  _announcements.py  _apps.py  _blocks.py  _bookmarks.py  _conversations.py  _custom_emojis.py  _directory.py  _domain_blocks.py  _emails.py  _endorsements.py  _favourites.py  _featured_tags.py  _follow_requests.py  _followed_tags.py  _instance.py  _lists.py  _markers.py  _media.py  _mutes.py  _notifications.py  _polls.py  _preferences.py  _profile.py  _push.py  _reports.py  _scheduled_statuses.py  _search.py  _statuses.py  _suggestions.py  _tags.py  _timelines.py  _trends.py
src/amasto/api/v2/: __init__.py  _filters.py  _instance.py  _media.py  _notification_policy.py  _notifications.py  _search.py  _suggestions.py
src/amasto/health/: __init__.py  _health.py
src/amasto/models/: __init__.py
src/amasto/models/v1/: __init__.py  _account.py  _account_warning.py  _announcement.py  _appeal.py  _application.py  _async_refresh.py  _context.py  _conversation.py  _custom_emoji.py  _domain_block.py  _encrypted_message.py  _error.py  _extended_description.py  _familiar_followers.py  _featured_tag.py  _filter.py  _identity_proof.py  _instance.py  _list.py  (+27 more)
src/amasto/oauth/: __init__.py  _authorize.py  _revoke.py  _token.py  _userinfo.py
tests/amasto_tests/: test_nodeinfo.py  test_version.py
(+4 files in other folders)
