[project]
name = "amasto"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "semver>=3.0.4",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "I",  # isort
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "S",  # flake9-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.isort]
case-sensitive = true
force-sort-within-sections = true
no-sections = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope="function"
